# td333

./: .gitignore  CREDITS.md  LICENSE  README.md  pyproject.toml  td3dump.sqs
.github/workflows/: release.yml  test.yml
controllers/minilab-mkii/: Memo.md  README.md  build_xrnm.py  midi_dump.py  minilab_renoise.xrnm
docs/: cli.md  mc303-design-fr.md  td3-mo-fr.md  td3-mo-qsg-fr.txt
maxforlive/: README.md  TD-3 Live.maxpat  TD-3 Pattern Editor.maxpat  td3.js  td3_device.js  td3_live.js  test_td3.mjs  test_td3_live.mjs
reaper/: README.md  td3_sysex_send.jsfx
renoise/com.timox.td3-renoise.xrnx/: main.lua  manifest.xml  td3.lua
src/td3/: __init__.py  cli.py  config.py  notes.py  pattern.py  sniff.py  sqs.py  sysex.py  yaml_io.py
tests/: test_reaper_jsfx.py  test_roundtrip.py
tests/slide_patterns/: A_slides_chain.yml  B_accents_same_pitch.yml  C_slide_same_pitch.yml  D_slide_accent_combo.yml  E_long_slide_chain.yml
